[navigation-arrow] [bug-fix] Set `z-index` of the right navigation arrow to `1` to prevent disabling in case of the left side badge's region wrap it.

--- a/src/assets/scss/App.scss
+++ b/src/assets/scss/App.scss
@@ -269,6 +269,7 @@
           margin-top: -11px;
           cursor: pointer;
           font-size: 48px;
+          z-index: 1;
         }
 
         .fs-prev-package {
